<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/webAppListItem"
    android:layout_width="match_parent"
    android:layout_height="@dimen/line_height"
    android:background="?attr/colorSurface"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:background="?attr/colorSurface"
        android:id="@+id/dragAnchor"
        android:layout_weight="0.5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/baseline_drag_indicator_24"
        android:scaleType="center"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:background="?attr/colorSurface"
        android:id="@+id/btnWebAppTitle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:maxLines="1"
        android:gravity="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:ellipsize="end" />

</LinearLayout>
