...
                                android:layout_height="wrap_content"
                                android:checked="@{webapp.isAllowCookies}"
                                android:onCheckedChanged="@{(switch, checked) -> webapp.onSwitchCookiesChanged(switch, checked)}"
                                android:text="@string/accept_cookies" />

                            <com.google.android.material.materialswitch.MaterialSwitch
                                android:id="@+id/switch3PCookies"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:checked="@{webapp.isAllowThirdPartyCookies}"
                                android:enabled="@{webapp.allowCookies}"
                                android:text="@string/accept_third_party_cookies" />

...

                <Button
                    android:id="@+id/btnCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel" />


                <Button
                    android:id="@+id/btnSave"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>

...
