<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="?android:dialogPreferredPadding"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/websiteUrl"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switchCreateShortcut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/create_shortcut_on_home_screen" />
</LinearLayout>
