...
        android:id="@+id/webviewActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:forceDarkAllowed="false"
            android:focusableInTouchMode="true" />

...
